Changed collection name.

--- a/_iconCloud/manifest.variables.json
+++ b/_iconCloud/manifest.variables.json
@@ -86,7 +86,7 @@
   },
     {
     "type": "Value",
-    "value": "Icons",
+    "value": "Visual Studio Code",
     "valueType": "Text",
     "referenceOnly": true,
     "name": "collectionName"
